--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11"
+  },
+  "dependencies": {
+    "node-sass": "^4.5.3"
   }
 }
