--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
-    "gulp-watch": "^4.3.11"
-  },
-  "dependencies": {
+    "gulp-watch": "^4.3.11",
     "node-sass": "^4.5.3"
   }
 }
